[build] 배포준비 완료